--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Commands\ManagementCommand\ProjectsCommand\DeleteProjectCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ProjectsCommand\OpenChangeProjectCommand.cs" />
     <Compile Include="Commands\ManagementCommand\SaveMainImageCommand.cs" />
+    <Compile Include="Commands\ManagementCommand\ServicesCommand\ChangeServiceCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ServicesCommand\DeleteServiceCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ServicesCommand\OpenAddServiceCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ServicesCommand\OpenChangeServiceCommand.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="ViewModel\Management\OrdersByServiceViewModel.cs" />
     <Compile Include="ViewModel\Management\ProjectEditViewModel.cs" />
     <Compile Include="ViewModel\Management\ProjectsEditViewModel.cs" />
+    <Compile Include="ViewModel\Management\ServiceEditViewModel.cs" />
     <Compile Include="ViewModel\Management\ServicesEditViewModel.cs" />
     <Compile Include="ViewModel\Management\StaticManagementViewModel.cs" />
     <Compile Include="ViewModel\ProjectsViewModel.cs" />
