--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -154,7 +154,10 @@
     <Compile Include="Commands\ManagementCommand\ChooseMainImageCommand.cs" />
     <Compile Include="Commands\ManagementCommand\DeleteRandomPhraseCommand.cs" />
     <Compile Include="Commands\ManagementCommand\PostsCommand\AddPostCommand.cs" />
+    <Compile Include="Commands\ManagementCommand\PostsCommand\CancelChangePostCommand.cs" />
+    <Compile Include="Commands\ManagementCommand\PostsCommand\ChangePostCommand.cs" />
     <Compile Include="Commands\ManagementCommand\PostsCommand\ChooseAddPostImageCommand.cs" />
+    <Compile Include="Commands\ManagementCommand\PostsCommand\ChoosePostImageCommand.cs" />
     <Compile Include="Commands\ManagementCommand\PostsCommand\DeletePostCommand.cs" />
     <Compile Include="Commands\ManagementCommand\PostsCommand\OpenAddPostCommand.cs" />
     <Compile Include="Commands\ManagementCommand\PostsCommand\OpenChangePostCommand.cs" />
