--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -206,6 +206,8 @@
     <Compile Include="HelpMethods\ObjectModel.cs" />
     <Compile Include="HelpMethods\SaveImageParameters.cs" />
     <Compile Include="HelpMethods\StaticImage.cs" />
+    <Compile Include="HelpMethods\StaticUser.cs" />
+    <Compile Include="Model\AccountModel\AddUserModel.cs" />
     <Compile Include="Model\AccountModel\RoleUserModel.cs" />
     <Compile Include="Model\AccountModel\UserWithRolesModel.cs" />
     <Compile Include="Model\BaseModel.cs" />
