--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Commands\ManagementCommand\AccountCommand\AddRoleCommand.cs" />
     <Compile Include="Commands\ManagementCommand\AccountCommand\AddRoleToUserCommand.cs" />
     <Compile Include="Commands\ManagementCommand\AccountCommand\BackToListUsersCommand.cs" />
+    <Compile Include="Commands\ManagementCommand\AccountCommand\CancelChangeRoleNameCommand.cs" />
     <Compile Include="Commands\ManagementCommand\AccountCommand\ChangeRoleNameCommand.cs" />
     <Compile Include="Commands\ManagementCommand\AccountCommand\DeleteRoleCommand.cs" />
     <Compile Include="Commands\ManagementCommand\AccountCommand\DeleteRoleToUserCommand.cs" />
